# src/main/java/neocode/formekouapi/endpoint/rest/controller/FormController.java
@@ -2,8 +2,10 @@ package neocode.formekouapi.endpoint.rest.controller;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
-import neocode.formekouapi.model.Form;
-import neocode.formekouapi.security.FirebaseAuthentication;
+import neocode.formekouapi.endpoint.rest.mapper.CreateFormMapper;
+import neocode.formekouapi.endpoint.rest.mapper.FormMapper;
+import neocode.formekouapi.endpoint.rest.model.CreateForm;
+import neocode.formekouapi.endpoint.rest.model.Form;
 import neocode.formekouapi.service.FormService;
 import org.springframework.web.bind.annotation.*;
 
@@ -14,23 +16,21 @@ import java.util.List;
 @Data
 public class FormController {
     private final FormService formService;
+    private final CreateFormMapper createFormMapper;
+    private final FormMapper formMapper;
 
     @GetMapping("/forms")
-    public List<Form> getAllForms(){
-        return formService.getAll();
+    public List<Form> getOwnForms(){
+        return formService.getOwnForms().stream().map(formMapper::toRest).toList();
     }
 
-    @GetMapping("/users/{userId}/forms")
-    public List<Form> getAllForms(@PathVariable String userId){
-        return formService.getAllByUserId(userId);
+    @GetMapping("/forms/{formId}")
+    public Form getFormById(@PathVariable String formId){
+        return formMapper.toRest(formService.getFormById(formId));
     }
 
     @PutMapping("/forms")
-    public Form crupdateForms(
-            FirebaseAuthentication authentication,
-            @RequestBody Form formToSave
-    ){
-        formToSave.setUser(authentication.getUser());
-        return formService.crupdateForm(formToSave);
+    public Form crupdateForm(@RequestBody CreateForm formToSave){
+        return formMapper.toRest(formService.crupdateForm(createFormMapper.toDomain(formToSave)));
     }
 }
